re PR c/7353 (Compiler dies on known working code (as of gcc 3.0))

PR c/7353
	* c-decl.c, cp/decl.c (start_decl): Point users of the old initialized-
	typedef extension at __typeof__.

From-SVN: r58298